--- a/pvc/k8s/pg.yml
+++ b/pvc/k8s/pg.yml
@@ -1,4 +1,12 @@
 ---
+# ConfigMap
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: pg
+data: <!!CHANGE_ME!!>
+
+---
 # Secrets
 apiVersion: v1
 kind: Secret
