--- a/hpa/k8s/dictionary.yml
+++ b/hpa/k8s/dictionary.yml
@@ -35,7 +35,7 @@ spec:
               memory: 20Mi
           livenessProbe:
             httpGet:
-              path: /api/v1/healthz
+              path: /api/v1/alive
               port: http
             initialDelaySeconds: 5
             periodSeconds: 10
@@ -44,7 +44,7 @@ spec:
             timeoutSeconds: 15
           readinessProbe:
             httpGet:
-              path: /api/v1/healthz
+              path: /api/v1/ready
               port: http
             initialDelaySeconds: 5
             periodSeconds: 30
@@ -79,7 +79,7 @@ spec:
   metrics:
     - type: Resource
       resource:
-        name: cpu
+        name: memory
         target:
           type: Utilization
-          averageUtilization: 30
+          averageValue: 5Mi
