--- a/helm/dictionary/templates/deployment.yaml
+++ b/helm/dictionary/templates/deployment.yaml
@@ -30,10 +30,9 @@ spec:
           resources:
             {{- toYaml .Values.resources | trim | nindent 12 -}}
           {{- with .Values.probes -}}
-            {{- $http := dict -}}
+            {{- $http := dict "port" "http" -}}
             {{- $_ := set $http "livenessPath" "/api/v1/alive" -}}
             {{- $_ := set $http "readinessPath" "/api/v1/ready" -}}
-            {{- $_ := set $http "port" "http" -}}
             {{- dict "Values" . "Http" $http  | include "probes.http" | indent 8 -}}
           {{- end -}}
       {{- with .Values.nodeSelector }}
