--- a/hpa/k8s/hangman.yml
+++ b/hpa/k8s/hangman.yml
@@ -33,7 +33,7 @@ spec:
               memory: 20Mi
           livenessProbe:
             httpGet:
-              path: /api/v1/healthz
+              path: /api/v1/alive
               port: http
             initialDelaySeconds: 5
             periodSeconds: 10
@@ -42,7 +42,7 @@ spec:
             timeoutSeconds: 15
           readinessProbe:
             httpGet:
-              path: /api/v1/healthz
+              path: /api/v1/ready
               port: http
             initialDelaySeconds: 5
             periodSeconds: 30
