--- a/hpa/k8s/dictionary.yml
+++ b/hpa/k8s/dictionary.yml
@@ -79,7 +79,7 @@ spec:
   metrics:
     - type: Resource
       resource:
-        name: memory
+        name: cpu
         target:
           type: Utilization
-          averageValue: 5Mi
+          averageUtilization: 30
