--- a/rbac/k8s/rbac.yml
+++ b/rbac/k8s/rbac.yml
@@ -17,6 +17,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: <!!CHANGE_ME!!>
+    namespace: <<!!CHANGE_ME!!>
 roleRef:
   kind: <!!CHANGE_ME!!>
   name: <!!CHANGE_ME!!>
